--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flyswatter",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "static file server to run from the terminal",
   "main": "index.js",
-  "repository": {},
   "author": "@bcruddy",
   "license": "MIT",
+  "repository": "https://github.com/bcruddy/flyswatter",
   "bin": {
       "flyswatter": "./index.js"
   },
