--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "flyswatter",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "static file server to run from the terminal",
-  "main": "index.js",
   "author": "@bcruddy",
   "license": "MIT",
   "repository": "https://github.com/bcruddy/flyswatter",
+  "main": "lib/server.js",
   "bin": {
     "flyswatter": "./index.js"
   },
