--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "flyswatter",
-  "version": "2.0.7",
-  "description": "static file server to run from the terminal",
-  "author": "@bcruddy",
-  "license": "MIT",
-  "repository": "https://github.com/bcruddy/flyswatter",
-  "main": "lib/server.js",
-  "bin": {
-    "flyswatter": "./index.js"
-  },
-  "dependencies": {
-    "express": "^4.14.0",
-    "pem": "^1.12.3",
-    "yargs": "^6.6.0"
-  }
+    "name": "flyswatter",
+    "version": "2.0.7",
+    "description": "static file server to run from the terminal",
+    "author": "@bcruddy",
+    "license": "MIT",
+    "repository": "https://github.com/bcruddy/flyswatter",
+    "main": "lib/server.js",
+    "bin": {
+        "flyswatter": "./index.js"
+    },
+    "scripts": {
+        "lint": "eslint index.js lib/*.js"
+    },
+    "dependencies": {
+        "express": "^4.14.0",
+        "pem": "^1.12.3",
+        "yargs": "^6.6.0"
+    },
+    "devDependencies": {
+        "eslint": "^4.17.0"
+    }
 }
