--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lint": "eslint index.js lib/*.js"
     },
     "dependencies": {
+        "chalk": "^2.3.0",
         "express": "^4.14.0",
         "pem": "^1.12.3",
         "yargs": "^6.6.0"
