--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
         "lint": "eslint index.js lib/*.js"
     },
     "dependencies": {
+        "body-parser": "^1.18.2",
         "chalk": "^2.3.0",
         "express": "^4.14.0",
+        "node-fetch": "^2.0.0",
         "pem": "^1.12.3",
         "yargs": "^6.6.0"
     },
