--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flyswatter",
-    "version": "2.0.7",
+    "version": "2.1.0",
     "description": "static file server to run from the terminal",
     "author": "@bcruddy",
     "license": "MIT",
@@ -10,14 +10,20 @@
         "flyswatter": "./index.js"
     },
     "scripts": {
-        "lint": "eslint index.js lib/*.js"
+        "lint": "eslint index.js lib/*.js",
+        "test": "npm run lint && jest --no-cache --coverage"
     },
     "dependencies": {
+        "body-parser": "^1.18.2",
+        "chalk": "^2.3.0",
         "express": "^4.14.0",
+        "node-fetch": "^2.0.0",
         "pem": "^1.12.3",
         "yargs": "^6.6.0"
     },
     "devDependencies": {
-        "eslint": "^4.17.0"
+        "eslint": "^4.17.0",
+        "jest": "^22.2.1",
+        "supertest": "^3.0.0"
     }
 }
