--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "flyswatter",
-    "version": "2.1.0",
-    "description": "static file server to run from the terminal",
+    "version": "2.2.0",
+    "description": "self-signing static file server + dev proxy",
     "author": "@bcruddy",
     "license": "MIT",
     "repository": "https://github.com/bcruddy/flyswatter",
@@ -10,20 +10,23 @@
         "flyswatter": "./index.js"
     },
     "scripts": {
+        "start": "nodemon ./index.js",
         "lint": "eslint index.js lib/*.js",
         "test": "npm run lint && jest --no-cache --coverage"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "body-parser": "^1.18.2",
         "chalk": "^2.3.0",
-        "express": "^4.14.0",
-        "node-fetch": "^2.0.0",
+        "express": "^4.17.1",
+        "lodash": "^4.17.15",
         "pem": "^1.12.3",
         "yargs": "^6.6.0"
     },
     "devDependencies": {
         "eslint": "^4.17.0",
         "jest": "^22.2.1",
+        "nodemon": "^2.0.2",
         "supertest": "^3.0.0"
     }
 }
